tests/single_instruction_translation_validation/mcsema/register-variants/vpackuswb_xmm_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:309:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %28) #22
            ^
0.02user 0.01system 0:00.03elapsed 103%CPU (0avgtext+0avgdata 27912maxresident)k
0inputs+16outputs (0major+3262minor)pagefaults 0swaps
